--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ section .title::after{
     bottom: -8px;
     left: 50%;
     font-size: 20px;
-    color: #1ca98f;
+    color: #2ab99e;
     padding: 0 5px;
     background: #fff;
     transform: translateX(-50%);
@@ -88,7 +88,7 @@ section .title::after{
 }
 .navbar.sticky{
     padding: 15px 0;
-    background: #1ca98f;
+    background: #2ab99e;
 }
 .navbar .max-width{
     display: flex;
@@ -101,7 +101,7 @@ section .title::after{
     font-weight: 600;
 }
 .navbar .logo a span{
-    color: #1ca98f;
+    color: #2ab99e;
     transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
@@ -120,7 +120,7 @@ section .title::after{
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover{
-    color: #1ca98f;
+    color: #2ab99e;                   
 }
 .navbar.sticky .menu li a:hover{
     color: #fff;
@@ -137,7 +137,7 @@ section .title::after{
     position: fixed;
     height: 45px;
     width: 42px;
-    background: #1ca98f;
+    background: #2ab99e;
     right: 30px;
     bottom: 10px;
     text-align: center;
@@ -164,7 +164,7 @@ section .title::after{
 
 /* home section styling */
 .home{
-    background:linear-gradient(to right, #00000066, #00000066), linear-gradient(to right, #00000066, #00000066),url("banner01.jpg") no-repeat center;
+    background:linear-gradient(to right, #00000066, #00000066), linear-gradient(to right, #00000066, #00000066),url("banner_01.jpg") no-repeat center;
     height: 100vh;
     color: #fff;
     min-height: 500px;
@@ -193,23 +193,23 @@ section .title::after{
     margin: 5px 0;
 }
 .home .home-content .text-3 span{
-    color: #1ca98f;
+    color: #2ab99e;
     font-weight: 500;
 }
 .home .home-content a{
     display: inline-block;
-    background: #1ca98f;
+    background: #2ab99e;
     color: #fff;
     font-size: 25px;
     padding: 12px 36px;
     margin-top: 20px;
     font-weight: 400;
     border-radius: 6px;
-    border: 2px solid #1ca98f;
+    border: 2px solid #2ab99e;
     transition: all 0.3s ease;
 }
 .home .home-content a:hover{
-    color: #1ca98f;
+    color: #2ab99e;
     background: none;
 }
 
@@ -325,25 +325,25 @@ section .title::after{
     margin-bottom: 10px;
 }
 .about .about-content .right .text span{
-    color: #1ca98f;
+    color: #2ab99e;
 }
 .about .about-content .right p{
     text-align: justify;
 }
 .about .about-content .right a{
     display: inline-block;
-    background: #1ca98f;
+    background: #2ab99e;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid #1ca98f;
+    border: 2px solid #2ab99e;
     transition: all 0.3s ease;
 }
 .about .about-content .right a:hover{
-    color: #1ca98f;
+    color: #2ab99e;
     background: none;
 }
 
@@ -371,7 +371,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .services .serv-content .card:hover{
-    background: #1ca98f;
+    background: #2ab99e;
 }
 .services .serv-content .card .box{
     transition: all 0.3s ease;
@@ -381,7 +381,7 @@ section .title::after{
 }
 .services .serv-content .card i{
     font-size: 50px;
-    color: #1ca98f;
+    color: #2ab99e;
     transition: color 0.3s ease;
 }
 .services .serv-content .card:hover i{
@@ -411,18 +411,18 @@ section .title::after{
 }
 .skills .skills-content .left a{
     display: inline-block;
-    background: #1ca98f;
+    background: #2ab99e;
     color: #fff;
     font-size: 18px;
     font-weight: 500;
     padding: 8px 16px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid #1ca98f;
+    border: 2px solid #2ab99e;
     transition: all 0.3s ease;
 }
 .skills .skills-content .left a:hover{
-    color: #1ca98f;
+    color: #2ab99e;
     background: none;
 }
 .skills .skills-content .right .bars{
@@ -450,16 +450,22 @@ section .title::after{
     height: 100%;
     left: 0;
     top: 0;
-    background: #1ca98f;
+    background: #2ab99e;
 }
 .skills-content .right .html::before{
-    width: 90%;
-}
-.skills-content .right .css::before{
     width: 80%;
 }
+.skills-content .right .css::before{
+    width: 70%;
+}
 .skills-content .right .js::before{
-    width: 20%;
+    width: 50%;
+}
+.skills-content .right .ror::before{
+    width: 30%;
+}
+.skills-content .right .mysql::before{
+    width: 50%;
 }
 
 
@@ -476,7 +482,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .teams .carousel .card:hover{
-    background: #1ca98f;
+    background: #2ab99e;
 }
 .teams .carousel .card .box{
     display: flex;
@@ -498,7 +504,7 @@ section .title::after{
     width: 150px;
     object-fit: cover;
     border-radius: 50%;
-    border: 5px solid #1ca98f;
+    border: 5px solid #2ab99e;
     transition: all 0.3s ease;
 }
 .teams .carousel .card:hover img{
@@ -514,7 +520,7 @@ section .title::after{
     margin: 0 5px;
     outline: none!important;
     border-radius: 50%;
-    border: 2px solid #1ca98f!important;
+    border: 2px solid #2ab99e!important;
     transition: all 0.3s ease;
 }
 .owl-dot.active{
@@ -523,7 +529,7 @@ section .title::after{
 }
 .owl-dot.active,
 .owl-dot:hover{
-    background: #1ca98f!important;
+    background: #2ab99e!important;
 }
 
 /* contact section styling */
@@ -554,7 +560,7 @@ section .title::after{
 }
 .contact .contact-content .row i{
     font-size: 25px;
-    color: #1ca98f;
+    color: #2ab99e;
 }
 .contact .contact-content .info .head{
     font-weight: 500;
@@ -613,12 +619,12 @@ section .title::after{
   border-radius: 6px;
   cursor: pointer;
   flex-wrap: nowrap;
-  background: #1ca98f;
-  border: 2px solid #1ca98f;
+  background: #2ab99e;
+  border: 2px solid #2ab99e;
   transition: all 0.3s ease;
 }
 .right form .button-area button:hover{
-  color: #1ca98f;
+  color: #2ab99e;
   background: none;
 }
 /* footer section styling */
@@ -629,7 +635,7 @@ footer{
     text-align: center;
 }
 footer span a{
-    color: #1ca98f;
+    color: #2ab99e;
     text-decoration: none;
 }
 footer span a:hover{
