--- a/style.css
+++ b/style.css
@@ -452,6 +452,12 @@ section .title::after{
     top: 0;
     background: #2ab99e;
 }
+.skills-content .right .python::before{
+    width: 60%;
+}
+.skills-content .right .DSA::before{
+    width: 50%;
+}
 .skills-content .right .html::before{
     width: 70%;
 }
@@ -460,9 +466,6 @@ section .title::after{
 }
 .skills-content .right .js::before{
     width: 50%;
-}
-.skills-content .right .ror::before{
-    width: 30%;
 }
 .skills-content .right .mysql::before{
     width: 50%;
